import App from "./App";
import { testStateMachine } from "react-automata";

it("State chart tests", () => {
    testStateMachine(App);
});
